Bug 319406 - makeplaylive credential dialog
Summary: makeplaylive credential dialog
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-06 09:18 UTC by Harald Sitter
Modified: 2013-09-27 15:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2013-05-06 09:18:24 UTC
when running muon discoverer from git master as of 5b0c0e8f7a6deafa9ca02040b4d1e8bd657b375c built with all possible deps it brings up a password dialog for makeplaylive login data, without context, without anything, right after startup

Reproducible: Always

Steps to Reproduce:
1. start muon-discoverer
Actual Results:  
silly dialog pops up

Expected Results:  
no silly dialog pops up
Comment 1 Aleix Pol 2013-05-09 16:37:24 UTC
It's (partially) fixed in a branch where we integrate it with Accounts SSO
Comment 2 Aleix Pol 2013-09-27 15:32:51 UTC
Git commit b9081fec5b85bb8553f0d56d1dededdc45cfe181 by Aleix Pol.
Committed on 27/09/2013 at 15:32.
Pushed by apol into branch '2.1'.

Add a bit more context on the credentials dialog for MakePlayLive

M  +1    -1    libmuon/backends/BodegaBackend/BodegaBackend.cpp

http://commits.kde.org/muon/b9081fec5b85bb8553f0d56d1dededdc45cfe181
Comment 3 Aleix Pol 2013-09-27 15:34:02 UTC
I know it looks a bit sad done like this, still I believe the correct fix will be using Accounts SSO, which aren't that ready yet for us to use.

Either way, note this is only for installing Wallpapers, I wouldn't hate you if you didn't distribute this plugin.