Add a bit more context on the credentials dialog for MakePlayLive

BUG: 319406